version 2020.12.07

Core
* [extractor/common] Extract timestamp from Last-Modified header
+ [extractor/common] Add support for dl8-* media tags (#27283)
* [extractor/common] Fix media type extraction for HTML5 media tags
  in start/end form

Extractors
* [picta] Fix KeyError when extraction playlist
* [youtube] Improve youtu.be extraction in non-existing playlists (#27324)


version 2020.12.05

Core
* [extractor/common] Improve Akamai HTTP format extraction
    * Allow m3u8 manifest without an additional audio format
    * Fix extraction for qualities starting with a number


version 2020.12.2

Extractors
* [youtube:tab] Extract channels only from channels tab (#27266)
* [youtube] Improve age-gated videos extraction (#27259)


version 2020.11.29

Core
* [YoutubeDL] Write static debug to stderr and respect quiet for dynamic debug
  (#14579, #22593)

Extractors
* [youtube] Improve yt initial player response extraction (#27216)


version 2020.11.26

Core
* [downloader/fragment] Set final file's mtime according to last fragment's
  Last-Modified header (#11718, #18384, #27138)

Extractors
* [youtube] Imporve music metadata and license extraction (#26013)


version 2020.11.24

Core
+ [extractor/common] Add generic support for akamai HTTP format extraction

Extractors
* [youtube:tab] Fix feeds extraction (#25695, #26452)
* [youtube:favorites] Restore extractor
* [youtube:tab] Fix some weird typo (#27157)


version 2020.11.21.1

Core
* [downloader/http] Fix crash during urlopen caused by missing reason
  of URLError
* [YoutubeDL] Fix --ignore-errors for playlists with generator-based entries
  of url_transparent (#27064)

Extractors
* [youtube] Fix error reason extraction (#27081)
* [youtube] Fix like and dislike count extraction (#25977)
+ [youtube:tab] Add support for current video and fix lives extraction (#27126)
* [youtube] Improve yt initial data extraction (#27093)



version 2020.11.19

Core