@@ -1,3 +1,3 @@
 from __future__ import unicode_literals
 
-__version__ = '2020.12.7'
+__version__ = '2020.12.9'
